Table canonical_item {
  canonical_item_id bigint [pk, increment]
  name varchar(50) [not null, unique]
}

Table item_subtype {
  subtype_id bigint [pk, increment]
  canonical_item_id bigint [not null]
  name varchar(100) [not null]

  indexes {
    (canonical_item_id, name) [unique]
  }
}

Table manufacturer {
  manufacturer_id bigint [pk, increment]
  name varchar(100) [not null, unique]

  Note: '상품 제조사. 판매처 체인/브랜드는 retailer로 별도 관리'
}

Table product {
  product_id bigint [pk, increment]
  source_product_name varchar(255) [not null]
  manufacturer_id bigint
  subtype_id bigint [not null]
  quantity decimal(10,2)
  unit varchar(20)

  indexes {
    (source_product_name, manufacturer_id, subtype_id) [unique]
  }
}

Table retailer {
  retailer_id bigint [pk, increment]
  name varchar(255) [not null, unique]

  Note: '판매처 체인/브랜드. 예: 이마트, 롯데마트, 홈플러스, GS더프레시'
}

//재귀 테이블
Table region {
  region_id bigint [pk, increment]

  // 상위 지역. 최상위 시/도는 null
  parent_region_id bigint

  // 서비스에서 사용하는 정규화된 지역명
  name varchar(50) [not null]

  // SIDO, SI, GUN, GU, EUP, MYEON, DONG, RI 등
  region_type varchar(20) [not null]

  // MySQL에서 NULL 부모를 가진 root 이름의 중복을 막기 위한 generated column
  root_region_name varchar(100) [note: 'CASE WHEN parent_region_id IS NULL THEN name ELSE NULL END, STORED']

  indexes {
    (parent_region_id, name) [unique]
    (root_region_name) [unique]
  }

  Note: '지역 계층. 예: 서울 > 강남구, 경기 > 성남시 > 분당구'
}

Table store {
  store_id bigint [pk, increment]
  retailer_id bigint [not null]

  name varchar(255) [not null]
  source_store_name varchar(255) [not null]

  // BRANCH: 실제 개별 지점
  // CHAIN_LEVEL: 특정 지점이 아닌 체인 단위 가격
  store_type varchar(20) [not null]

  // open, closed, historical, unknown 등 매장 영업/이력 상태
  store_status varchar(20) [not null]

  // matched, review, api_not_found, unmatched 등 장소 매칭 판정
  match_status varchar(20) [not null]

  // valid, review, not_applicable 등 매칭 검증 상태
  validation_status varchar(20) [not null]

  // BRANCH일 경우 매장이 속한 가장 구체적인 지역
  // CHAIN_LEVEL은 특정 지역에 귀속되지 않으므로 NULL
  region_id bigint

  indexes {
    (retailer_id, name) [unique]
    (retailer_id, source_store_name) [unique]
  }

  Note: '''
  판매 가격이 관측되는 판매처 단위.

  BRANCH:
    실제 개별 지점.
    예: 이마트 월계점, 롯데슈퍼 장위점
    region_id 필수

  CHAIN_LEVEL:
    특정 지점이 아닌 체인 단위로 제공된 가격.
    예: CU(본사), GS25(본사)
    region_id는 NULL

  source_store_name은 원천 데이터의 판매업소명을 그대로 보관한다.
  '''
}

Table price_observation {
  price_observation_id bigint [pk, increment]
  product_id bigint [not null]
  store_id bigint [not null]
  survey_date date [not null]
  price int [not null]
  unit_price decimal(10,2)
  is_sale boolean
  is_one_plus_one boolean

  indexes {
    (product_id, store_id, survey_date) [unique]
  }
}

// FIS - 설탕, 밀가루 용도
Table fis_item {
  fis_item_id bigint [pk, increment]

  // CostRadar 기준 품목
  canonical_item_id bigint [not null]

  // 내부 식별자 - 원천 코드 이외 정보 다루기 쉽도록 추가
  item_key varchar(50) [not null, unique] // wheat_srw, white_sugar

  // FIS 원천 식별 정보
  cmdt_id varchar(30) [not null] // FIS에서 품목을 식별하는 코드
  cmdt_se_cd varchar(20) [not null] // FIS에서 사용하는 품목 분류 코드

  item_name varchar(100) [not null]

  // 원본 종가 단위
  price_unit varchar(30) [not null]

  // 환산가 단위
  converted_unit varchar(30)

  // SAME_COMMODITY: canonical_item과 동일한 원재료
  // UPSTREAM_RAW_MATERIAL: canonical_item의 상위 원재료/가격 선행 신호
  relation_type varchar(30) [not null]

  indexes {
    (cmdt_se_cd, cmdt_id) [unique]
  }
}

Table fis_price_observation {
  fis_price_observation_id bigint [pk, increment]

  fis_item_id bigint [not null]

  // 선물 계약 인도월
  contract_month char(7) [not null] // 2026-09

  // 해당 가격이 시장에서 관측된 날짜
  trade_date date [not null]

  // 거래일에 해당 선물계약이 마지막으로 거래된 가격(종가)
  close_price decimal(12,4) [not null]

  // converted_unit 기준 단가
  unit_price decimal(10,2)

  // 전 거래일 대비 가격 변화량
  change_amount decimal(12,4)

  // 전 거래일 대비 가격 변화율
  change_rate_pct decimal(8,4)

  // 원래 종가를 converted_unit 기준으로 환산한 가격
  converted_price decimal(12,4)

  indexes {
    (fis_item_id, contract_month, trade_date) [unique]
  }
}

// kamis 
Table kamis_item {
  kamis_item_id bigint [pk, increment]

  canonical_item_id bigint [not null]

  item_category_code varchar(10) [not null]
  item_code varchar(20) [not null]
  item_name varchar(100) [not null]

  //같은 품목 안의 품종/규격 구분 : 계란 21=특란10구, 23=특란30구
  kind_code varchar(20) [not null]
  kind_name varchar(100) [not null]

  //품종 안의 등급/세부 분류 구분 : 계란 71=일반란, 소고기 01=1++등급
  rank_code varchar(20) [not null]
  rank_name varchar(100)

  quantity decimal(10,2)
  unit varchar(20)

  indexes {
    (item_category_code, item_code, kind_code, rank_code) [unique]
  }
}

Table kamis_price_observation {
  kamis_price_observation_id bigint [pk, increment]

  kamis_item_id bigint [not null]

  observed_date date [not null]
  price int [not null]
  unit_price decimal(10,2)

  //가격이 어떤 범위/성격의 가격인지 : 전국, 평균, 평년
  scope_name varchar(50) [not null]

  indexes {
    (kamis_item_id, observed_date, scope_name) [unique]
    observed_date
  }
}

Table retailer_product_listing {
  listing_id bigint [pk, increment]

  product_id bigint [not null]
  retailer_id bigint [not null]

  source_product_id varchar(100) [not null]
  source_product_name varchar(255) [not null]
  product_url varchar(1000) [not null]

  indexes {
    (retailer_id, source_product_id) [unique]
  }
}

Table retailer_price_observation {
  retailer_price_observation_id bigint [pk, increment]

  listing_id bigint [not null]
  collected_at datetime [not null]

  price int [not null]
  promotion_type varchar(30)

  indexes {
    (listing_id, collected_at) [unique]
    collected_at
  }
}



Ref: item_subtype.canonical_item_id > canonical_item.canonical_item_id
Ref: product.subtype_id > item_subtype.subtype_id
Ref: product.manufacturer_id > manufacturer.manufacturer_id
Ref: store.retailer_id > retailer.retailer_id
Ref: price_observation.product_id > product.product_id
Ref: price_observation.store_id > store.store_id

//fis
Ref: fis_price_observation.fis_item_id > fis_item.fis_item_id
Ref: fis_item.canonical_item_id > canonical_item.canonical_item_id

// kamis 
Ref: kamis_item.canonical_item_id > canonical_item.canonical_item_id
Ref: kamis_price_observation.kamis_item_id > kamis_item.kamis_item_id

Ref: region.parent_region_id > region.region_id
Ref: store.region_id > region.region_id

Ref: retailer_product_listing.product_id > product.product_id
Ref: retailer_product_listing.retailer_id > retailer.retailer_id
Ref: retailer_price_observation.listing_id > retailer_product_listing.listing_id
